fix: Carousel photo to cover not stretch

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,15 +2,11 @@
 /*caroussel*/
 
 
-.carousel-slide {
-    object-fit: cover;
-}
 .carousel-item img {
-    height: 95vh; 
+    height: 90vh; 
     overflow: hidden;
+    object-fit: cover;
       } 
-
-
 
 /* testimonials */
 
@@ -191,7 +187,7 @@ footer div {
     align-items: baseline;
     justify-content: center;
 }
-.package-name{
+.section-name{
     color: #949599;
     font-family: 'BenchNine', sans-serif;
     text-align: center;
@@ -230,16 +226,22 @@ hr {
 
 /* About */
 
+.about-urszula {
+    margin-top: 40px;
+    margin-bottom: -20px;
+}
+
 .about{
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     margin: 30px 4vw;
+    max-width: 100vw;
 }
 
 .photographer-picture-container{
     max-width:350px;
-    height: 350px;
+    max-height: 350px;
     border-style: solid;
     border-color: #cccccc;
     border-width: 3px;
@@ -250,7 +252,7 @@ hr {
 
 .photographer-picture{
     background: no-repeat center center;
-    height: 100% ;
+    max-height: 350px ;
     display: block;
     border-radius: 50%;
     margin: 0 auto;}
@@ -335,7 +337,7 @@ hr {
     .packages-headline {
        font-size: 6em;
     }
-    .package-name {
+    .section-name {
         font-size: 4em;
     }
     .package-description{
@@ -391,10 +393,3 @@ hr {
     .hide-big {
         display: none;}
     }
-  
- @media screen and (max-width: 1199px) {
-        .hide-small {
-            display: none !important;
-        }
-    }
- 
